gaps-correction

--- a/style/flower-market.css
+++ b/style/flower-market.css
@@ -328,7 +328,8 @@
         align-items: flex-start;
     }
     .banner{
-        flex-direction: column-reverse;        
+        flex-direction: column-reverse; 
+        margin-bottom: 60px;       
     }
     
     .container{
@@ -361,15 +362,13 @@
     .plants-lover{
         flex-direction: column;
         gap: 18px;
-        
+        margin-top: 40px;   
     }
     .plants-lover-content{
-        width: 100%;
-        
+        width: 100%;   
     }
     .plants-lover-img{
         width: 100%;
-    
     }
     .plants-lover-title{
         font-size: 1.5rem;
@@ -390,8 +389,8 @@
     .grid-items{
         grid-template-columns: 1fr;
         margin-bottom: 40px;
+        margin-top: 50px;
     }
-    
     .align{
         margin-top: 0px;
         font-size: 1.2rem;
